# hiring

./: Questions_Bank.md  README.md  security.md
Algo/: README.md  benchmark.js  custom-number-type-increment.md  custom-number-type-inicrement.md  fizzbuzz.js  fizzbuzz.md  fizzbuzz.test.ts  fizzbuzz.ts  index.ts  package-lock.json  package.json  performance.ts
Backend/: ddd-and-cqrs-intermediare-senior.md  ddd-and-cqrs-intermediate-senior.md  ddd-and-cqrs-junior.md  ddd-and-cqs-level-1.md  ddd-and-cqs-level-2.md
Backend/Node/Boilerplate/: cucumber.js  package.json  readme.md  tsconfig.json
Backend/Node/Boilerplate/features/: cucumberContext.ts  park_vehicule.feature  register_vehicle.feature
Backend/PHP/Boilerplate/: composer.json  readme.md
DataEngineer/Junior/: bike_investigation.py  data-level-1.md  test_bike_investigation.py
DataIngenieer/Junior/: pyproject.toml
DataScience/: data-science-level-2.ipynb
Frontend/: github-user-search-intermediaire-senior.md  github-user-search-junior.md  react-level-1.md  react-level-2.md
Mobile/: quizz.md  react-native-intermediate-senior.md  react-native-junior.md  react-native-level-2.md
Mobile/React Native - Level 1/: react-native-level1.md
ProductManager/: Level-1--Define-a-story.md  Level-2--Define-a-backlog.md  README.md
Python/: Questions_Bank.md  SQL-level1.md  bike_investigation.py  data-level-1.md
QA/: Level-1-junior-to-confirmed.md  Level-2-beyond-confirmed.md
SRE/: Github_Actions.md  ansible.md  bash.md  input.txt  terraform.md
SRE/exercises/: action.yml  data.tf  hello.py  passwd
(+18 files in other folders)
