[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junior-data-transformation-and-analysis-evaluation"
version = "1.0.0"
authors = [
    {name = "fulll", email = "developer@fulll.fr"},
]
description = "Data Engineer Junior: data transformation and analysis evaluation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Private",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy==1.23.4"
  "pandas==1.3.5"
]